@@ -9,4 +9,7 @@ lib/Digest/Trivial.pm
 t/001_trivial.t
 t/101_trivial_x.t
 t/301_random.t
+t/950_pod.t
+t/960_pod_coverage.t
+t/990_kwalitee.t
 META.yml                                 Module meta-data (added by MakeMaker)
