@@ -1,26 +1,43 @@
 --- #YAML:1.0
 name:               Digest-Trivial
-version:            2009070801
+version:            2009112401
 abstract:           Trivial but fast ways to map strings to small integers
 author:
     - Abigail <abigail@abigail.be>
 license:            mit
 distribution_type:  module
 configure_requires:
+    constant:             0
     ExtUtils::MakeMaker:  0
+    strict:               0
+    Test::More:           0.88
+    warnings:             0
 build_requires:
+    constant:             0
     ExtUtils::MakeMaker:  0
-    Test::More:           0
+    strict:               0
+    Test::More:           0.88
+    warnings:             0
 requires:
-    perl:  5.006
+    AutoLoader:  0
+    Exporter:    0
+    perl:        5.006
+    strict:      0
+    warnings:    0
+    XSLoader:    0
 resources:
     repository:  git://github.com/Abigail/Digest--Trivial.git
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
 keywords:  []
+test_requires:
+    constant:    0
+    strict:      0
+    Test::More:  0.88
+    warnings:    0
