@@ -7,11 +7,10 @@ no  warnings 'syntax';
 use constant NR_OF_CHARS => 256;
 use constant MAX_CHAR    => NR_OF_CHARS - 1;
 
-use Test::More tests => 1 + 1 * NR_OF_CHARS;
+use Test::More 0.88;
+use Digest::Trivial;
 
-BEGIN {
-    use_ok 'Digest::Trivial'
-};
+our $r = eval "require Test::NoWarnings; 1";
 
 #
 # Double letters cancel out each other
@@ -21,3 +20,7 @@ foreach my $i (0 .. MAX_CHAR) {
        $str x= 2;
     is trivial_x $str, 0, "Double chr ($i) is cancelled in trivial_x";
 }
+
+Test::NoWarnings::had_no_warnings () if $r;
+
+done_testing;
